Use Bootstrap styling

--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -3,40 +3,40 @@
   PrijateliTree - View Round
 {% endblock title %}
 {% block content %}
-  <div style="text-align: center;">
-    <h2 style="margin-bottom: 30px;">Round: {{ current_round }}</h2>
+  <div class="container-sm general-container">
+    <h1>Round: {{ current_round }}</h1>
     {% if first_round %}
-      <p style="font-size: 24px; margin-bottom: 20px;">
+      <h2>
         Your Ball:
         {% if ball == 'R' %}
-          <span class="red_text">Red</span>
+          <span class="text-danger">Red</span>
         {% elif ball == 'B' %}
-          <span class="blue_text">Blue</span>
+          <span class="text-primary">Blue</span>
         {% else %}
           {{ ball }}
         {% endif %}
-      </p>
+      </h2>
     {% else %}
-      <h2 style="margin-bottom: 20px;">Your Previous Guess</h2>
-      <p style="font-size: 24px; margin-bottom: 20px;">
+      <h1>Your Previous Guess</h1>
+      <h2>
         {% if previous_answers.your_previous_answer == 'R' %}
-          <span class="red_color">Red</span>
+          <span class="text-danger">Red</span>
         {% elif previous_answers.your_previous_answer == 'B' %}
-          <span class="blue_color">Blue</span>
+          <span class="text-primary">Blue</span>
         {% else %}
           {{ previous_answers.your_previous_answer }}
         {% endif %}
-      </p>
-      <h2 style="margin-bottom: 20px;">Neighbors' Previous Guesses</h2>
+      </h2>
+      <h1>Neighbors' Previous Guesses</h1>
       <ul style="list-style: none; padding: 0;">
         {% for index in previous_answers.neighbors_previous_answer %}
           {% set neighbor_answer = previous_answers.neighbors_previous_answer[loop.index-1] %}
           {% set neighbor_name = previous_answers.neighbors_names[loop.index-1] %}
           <li style="font-size: 24px; margin-bottom: 20px;">
             {% if neighbor_answer == 'R' %}
-              <span>{{ neighbor_name }}</span><span class="red_color">Red</span>
+              <span>{{ neighbor_name }}</span><span class="text-danger">Red</span>
             {% elif neighbor_answer == 'B' %}
-              <span>{{ neighbor_name }}</span><span class="blue_color">Blue</span>
+              <span>{{ neighbor_name }}</span><span class="text-primary">Blue</span>
             {% else %}
               {{ neighbor_answer }}
             {% endif %}
@@ -45,7 +45,7 @@
       </ul>
     {% endif %}
     <!-- Dummy buttons -->
-    <h2 style="margin-bottom: 20px">Choose a color</h2>
+    <h1>Choose a color</h1>
     <button type="submit" class="btn btn-danger">Red</button>
     <button type="submit" class="btn btn-primary">Blue</button>
   </div>
