make waiting page nicer #48

--- a/prijateli_tree/app/templates/waiting.html
+++ b/prijateli_tree/app/templates/waiting.html
@@ -22,6 +22,8 @@
 {% block content %}
   <div class="container-sm general-container">
     <h1>{{ text.waiting_screen.waiting }}</h1>
-    <div class="spin-loader"></div>
+    <br>
+    <br>
+    <div class="container-sm general-container spin-loader"></div>
   </div>
 {% endblock content %}
