--- a/prijateli_tree/app/templates/end_of_game.html
+++ b/prijateli_tree/app/templates/end_of_game.html
@@ -5,44 +5,34 @@
 {% block content %}
   <div class="container-sm general-container">
     <div class="pb-4">
-    <h1>
-      {% if is_correct %}
-        {{ text.game_results.you_won }}
-      {% else %}
-        {{ text.game_results.better_luck }}
-      {% endif %}
-    </h1>
+      <h1>
+        {% if is_correct %}
+          {{ text.game_results.you_won }}
+        {% else %}
+          {{ text.game_results.better_luck }}
+        {% endif %}
+      </h1>
     </div>
-    
     <div>
-    {% if correct_color == "B" %}
-      {{ text.game_results.the_computer_chose_blue }}
-    {% else %}
-      {{ text.game_results.the_computer_chose_red }}
-    {% endif %}
+      {% if correct_color == "B" %}
+        {{ text.game_results.the_computer_chose_blue }}
+      {% else %}
+        {{ text.game_results.the_computer_chose_red }}
+      {% endif %}
     </div>
-
     {% if player_answer == "B" %}
       You chose Blue.
     {% else %}
       You chose Red.
     {% endif %}
-    
     <div class = "pt-2">
-      <h3>
-    {{ text.real_game_intro.added_points | replace('{X}', points) }}
-    </h3>
+      <h3>{{ text.real_game_intro.added_points | replace('{X}', points) }}</h3>
     </div>
-    
-   
     <div class = "p-5">
       <form method="get"
-          action="{{ url_for('view_start_of_game', player_id=player_id, game_id=game_id) }}">
-          <button class="btn btn-primary" type="submit" value="submit">
-              {{ text.rules_screen.next }}
-          </button>
+            action="{{ url_for('view_start_of_game', player_id=player_id, game_id=game_id) }}">
+        <button class="btn btn-primary" type="submit" value="submit">{{ text.rules_screen.next }}</button>
       </form>
+    </div>
   </div>
-
-</div>
 {% endblock content %}
