--- a/prijateli_tree/app/templates/start_of_game.html
+++ b/prijateli_tree/app/templates/start_of_game.html
@@ -3,25 +3,16 @@
   Start of Game
 {% endblock title %}
 {% block content %}
-
-
   <div class="container-sm general-container">
-
     <div class = "pb-4">
-        <h1>
-            {{ text.ready_to_play.get_ready }}
-        </h1>
+      <h1>{{ text.ready_to_play.get_ready }}</h1>
     </div>
-    
     {{ text.real_game_intro.if_you_win | replace('{X}', points) }}
-    
     <div class = "p-5">
-        <form method="get"
+      <form method="get"
             action="{{ url_for('view_round', player_id=player_id, game_id=game_id) }}">
-            <button class="btn btn-primary" type="submit" value="submit">
-                {{text.ready_to_play.im_ready}}
-            </button>
-        </form>
+        <button class="btn btn-primary" type="submit" value="submit">{{ text.ready_to_play.im_ready }}</button>
+      </form>
     </div>
-    </div>
+  </div>
 {% endblock content %}
