Clean templates for game loop (#65)
<!--- Please write your PR name in the present imperative tense.
Examples of that tense are: "Fix issue in the dispatcher where…",
"Improve our handling of…", etc." -->
<!-- For more information on Pull Requests, you can reference here:
https://success.vanillaforums.com/kb/articles/228-using-pull-requests-to-contribute
-->
## Describe Your Changes

- added languages to `round.html`,  
- made minor improvements on the aesthetics for the wait screen and end
of game
- added a start of game screen, as per the UX document.

## Non-Obvious Technical Information


## Checklist Before Requesting a Review
- [x] The code runs successfully.

```commandline
 curl http://localhost:8000/games/3/player/2/start_of_game
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="content-language" content="en-us">
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
    
      <meta name="description"
            content="A FastAPI application used to play lab games and collect survey data.">
    
    <title>
      
  Start of Game

...


2023-11-23 01:15:41 INFO:     172.20.0.1:33430 - "GET /games/3/player/2/start_of_game HTTP/1.1" 200 OK
2023-11-23 01:16:49 INFO:     172.20.0.1:55296 - "GET /games/3/player/2/end_of_game HTTP/1.1" 200 OK
2023-11-23 01:17:02 INFO:     172.20.0.1:36786 - "GET /games/3/player/2/round HTTP/1.1" 200 OK
```

--- a/prijateli_tree/app/templates/end_of_game.html
+++ b/prijateli_tree/app/templates/end_of_game.html
@@ -4,28 +4,35 @@
 {% endblock title %}
 {% block content %}
   <div class="container-sm general-container">
-    <h1>
-      {% if is_correct %}
-        {{ text.game_results.you_won }}
+    <div class="pb-4">
+      <h1>
+        {% if is_correct %}
+          {{ text.game_results.you_won }}
+        {% else %}
+          {{ text.game_results.better_luck }}
+        {% endif %}
+      </h1>
+    </div>
+    <div>
+      {% if correct_color == "B" %}
+        {{ text.game_results.the_computer_chose_blue }}
       {% else %}
-        {{ text.game_results.better_luck }}
+        {{ text.game_results.the_computer_chose_red }}
       {% endif %}
-    </h1>
-    {% if correct_color == "B" %}
-      {{ text.game_results.the_computer_chose_blue }}
-    {% else %}
-      {{ text.game_results.the_computer_chose_red }}
-    {% endif %}
+    </div>
     {% if player_answer == "B" %}
       You chose Blue.
     {% else %}
       You chose Red.
     {% endif %}
-    <br>
-    <br>
-    {{ text.real_game_intro.added_points | replace('{X}', points) }}
-    <br>
-    <br>
-    <a href="{{ url_for('view_round', player_id=player_id, game_id=game_id) }}">Next</a>
+    <div class="pt-2">
+      <h3>{{ text.real_game_intro.added_points | replace('{X}', points) }}</h3>
+    </div>
+    <div class="p-5">
+      <form method="get"
+            action="{{ url_for('view_start_of_game', player_id=player_id, game_id=game_id) }}">
+        <button class="btn btn-primary" type="submit" value="submit">{{ text.rules_screen.next }}</button>
+      </form>
+    </div>
   </div>
 {% endblock content %}
