--- a/prijateli_tree/app/templates/create_session.html
+++ b/prijateli_tree/app/templates/create_session.html
@@ -42,9 +42,7 @@
             <label for="pos-one" class="col-sm-4 form-label">Player One</label>
             <div class="col-sm-8">
               <select id="pos-one" class="form-select form-select-sm" name="pos_one">
-                {% for s in students|sort(attribute='last_name') %}
-                  <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                {% endfor %}
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
               </select>
             </div>
           </div>
@@ -52,9 +50,7 @@
             <label for="pos-two" class="col-sm-4 form-label">Player Two</label>
             <div class="col-sm-8">
               <select id="pos-two" class="form-select form-select-sm" name="pos_two">
-                {% for s in students|sort(attribute='last_name') %}
-                  <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                {% endfor %}
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
               </select>
             </div>
           </div>
@@ -62,9 +58,7 @@
             <label for="pos-three" class="col-sm-4 form-label">Player Three</label>
             <div class="col-sm-8">
               <select id="pos-three" class="form-select form-select-sm" name="pos_three">
-                {% for s in students|sort(attribute='last_name') %}
-                  <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                {% endfor %}
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
               </select>
             </div>
           </div>
@@ -72,9 +66,7 @@
             <label for="pos-four" class="col-sm-4 form-label">Player Four</label>
             <div class="col-sm-8">
               <select id="pos-four" class="form-select form-select-sm" name="pos_four">
-                {% for s in students|sort(attribute='last_name') %}
-                  <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                {% endfor %}
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
               </select>
             </div>
           </div>
@@ -84,9 +76,7 @@
               <select id="pos-five"
                       class="col-sm-4 form-select form-select-sm"
                       name="pos_five">
-                {% for s in students|sort(attribute='last_name') %}
-                  <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                {% endfor %}
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
               </select>
             </div>
           </div>
@@ -96,9 +86,7 @@
               <select id="pos-six"
                       class="col-sm-4 form-select form-select-sm"
                       name="pos_six">
-                {% for s in students|sort(attribute='last_name') %}
-                  <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                {% endfor %}
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
               </select>
             </div>
           </div>
