--- a/prijateli_tree/app/templates/admin_dashboard.html
+++ b/prijateli_tree/app/templates/admin_dashboard.html
@@ -14,6 +14,14 @@
       // Used to clear the URL of parameters after the banner alert is closed.
       window.history.replaceState(null, '', window.location.pathname);
     }
+
+    const copyToClipboard = async (id) => {
+      try {
+        await navigator.clipboard.writeText(`${window.location.host}/games/session/${id}`);
+      } catch (error) {
+        console.error("Failed to copy to clipboard:", error);
+      }
+    }
   </script>
 {% endblock helper_script %}
 {% block content %}
@@ -33,17 +41,19 @@
         <a class="btn btn-primary btn-sm"
            href='{{ url_for("dashboard_create_session") }}'
            role="button">New Session</a>
-        <table id="games" class="table table-hover table-bordered caption-top">
+        <table id="games"
+               class="table table-hover table-bordered caption-top text-center">
           <caption>List of Sessions</caption>
           <thead>
             <tr>
               <th scope="col">ID</th>
               <th scope="col">Number of Games</th>
               <th scope="col">Players</th>
+              <th scope="col">Copy URL</th>
             </tr>
           </thead>
           <tbody class="table-group-divider">
-            {% if games|length == 0 %}
+            {% if sessions|length == 0 %}
               <tr class="empty-table">
                 <td colspan="3">There are no sessions currently in the system.</td>
               </tr>
@@ -53,13 +63,21 @@
                 <th>{{ s.id }}</th>
                 <td>{{ s.num_games }}</td>
                 <td>{{ s.player_string }}</td>
+                <td>
+                  {% if not s.finished %}
+                    <button role="button"
+                            class="btn btn-primary btn-sm"
+                            onclick="copyToClipboard({{ s.id }})">Copy to Clipboard</button>
+                  {% endif %}
+                </td>
               </tr>
             {% endfor %}
           </tbody>
         </table>
       </div>
       <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
-        <table id="students" class="table table-hover table-bordered caption-top">
+        <table id="students"
+               class="table table-hover table-bordered caption-top text-center">
           <caption>List of Students</caption>
           <thead>
             <tr>
@@ -92,7 +110,7 @@
           </tbody>
         </table>
       </div>
-      <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
+      <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container text-center">
         <table id="denir-transactions"
                class="table table-hover table-bordered caption-top">
           <caption>List of Denir Transactions</caption>
@@ -122,7 +140,8 @@
         </table>
       </div>
       <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
-        <table id="game-types" class="table table-hover table-bordered caption-top">
+        <table id="game-types"
+               class="table table-hover table-bordered caption-top text-center">
           <caption>List of Game Types</caption>
           <thead>
             <tr>
