--- a/prijateli_tree/app/templates/end_of_game.html
+++ b/prijateli_tree/app/templates/end_of_game.html
@@ -30,7 +30,7 @@
     </div>
     <div class="p-5">
       <form method="get"
-            action="{{ url_for('view_start_of_game', player_id=player_id, game_id=game_id) }}">
+            action="{{ url_for('go_to_next_game', player_id=player_id, game_id=game_id) }}">
         <button class="btn btn-primary" type="submit" value="submit">{{ text.rules_screen.next }}</button>
       </form>
     </div>
