--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -46,7 +46,16 @@
     {% endif %}
     <!-- Dummy buttons -->
     <h1>{{ text.game_first_round.guess_color }}</h1>
-    <button type="submit" class="btn btn-danger">{{ text.util.red }}</button>
-    <button type="submit" class="btn btn-primary">{{ text.util.blue }}</button>
+<!-- Button for 'Red' answer -->
+    <form action="{{ url_for('route_add_answer', game_id=game_id, player_id=player_id) }}" method="post">
+        <input type="hidden" name="player_answer" value="R">
+        <button type="submit" class="btn btn-danger">{{ text.util.red }}</button>
+    </form>
+    
+    <!-- Button for 'Blue' answer -->
+    <form action="{{ url_for('route_add_answer', game_id=game_id, player_id=player_id) }}" method="post">
+        <input type="hidden" name="player_answer" value="B">
+        <button type="submit" class="btn btn-primary">{{ text.util.blue }}</button>
+    </form>
   </div>
 {% endblock content %}
