--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -4,6 +4,11 @@
 {% endblock title %}
 {% block content %}
   <div class="container-sm general-container">
+    {% if practice_game %}
+      <p class="text-end">Practice Game</p>
+    {% else %}
+      <p class="text-end">Real Game</p>
+    {% endif %}
     <p>Round: {{ current_round }}</p>
     {% if first_round %}
       <h2>
