--- a/prijateli_tree/app/templates/end_of_game.html
+++ b/prijateli_tree/app/templates/end_of_game.html
@@ -27,7 +27,7 @@
     {% endif %}
     <div class="pt-2">
       {% if practice_game %}
-        <h3></h3>
+        <h3>{{ text.intro_practice.since_these_rules }}</h3>
       {% else %}
         <h3>{{ text.real_game_intro.added_points | replace('{X}', points) }}</h3>
       {% endif %}
