--- a/prijateli_tree/app/templates/student_info.html
+++ b/prijateli_tree/app/templates/student_info.html
@@ -1,6 +1,6 @@
 { % extends base.html % }
 { % block title % }
 <div class="container-sm general-container">
-    <p class="text-end">Student Name</p>
-    <p class="text-end">Student Score</p>
+    <p class="text-end">{{ player_name }}</p>
+    <p class="text-end">{{ player_score }}</p>
 </div>
