--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -3,6 +3,7 @@
   PrijateliTree - View Round
 {% endblock title %}
 {% block content %}
+{% include 'student_info.html' %}
   <div class="container-sm general-container">
     {% if practice_game %}
       <p class="text-end">Practice Game</p>
