--- a/prijateli_tree/app/templates/end_of_game.html
+++ b/prijateli_tree/app/templates/end_of_game.html
@@ -3,6 +3,7 @@
   End of Game
 {% endblock title %}
 {% block content %}
+  {% include "student_info.html" %}
   <div class="container-sm general-container">
     <div class="pb-4">
       <h1>
