--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -4,7 +4,7 @@
 {% endblock title %}
 {% block content %}
   <div class="container-sm general-container">
-    {% include 'student_info.html' %}
+    {% include "student_info.html" %}
     {% if practice_game %}
       <p class="text-end">Practice Game</p>
     {% else %}
