--- a/prijateli_tree/app/templates/waiting.html
+++ b/prijateli_tree/app/templates/waiting.html
@@ -38,7 +38,7 @@
 {% endblock title %}
 {% block content %}
   <div class="container-sm general-container">
-    {% include 'student_info.html' %}
+    {% include "student_info.html" %}
     <h1>{{ text.waiting_screen.waiting }}</h1>
     <br>
     <br>
