#80 add block to add js

--- a/prijateli_tree/app/templates/qualtrics.html
+++ b/prijateli_tree/app/templates/qualtrics.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block helper_script %}
+
+{% endblock helper_script %}
+
 {% block title %}
   PrijateliTree - Survey
 {% endblock title %}
