--- a/prijateli_tree/app/templates/qualtrics.html
+++ b/prijateli_tree/app/templates/qualtrics.html
@@ -1,16 +1,15 @@
 {% extends "base.html" %}
-
 {% block helper_script %}
-
 {% endblock helper_script %}
-
 {% block title %}
   PrijateliTree - Survey
 {% endblock title %}
 {% block content %}
-<div class="container-sm general-container">
-    <iframe src="https://uchicago.co1.qualtrics.com/jfe/form/SV_eaqREcRYZgwsuHk" 
-    title="Pre-survey" 
-    frameborder="0" height="1200px" width="1000px"></iframe>    </iframe>
-</div>
+  <div class="container-sm general-container">
+    <iframe src="https://uchicago.co1.qualtrics.com/jfe/form/SV_eaqREcRYZgwsuHk"
+            title="Pre-survey"
+            frameborder="0"
+            height="1200px"
+            width="1000px"></iframe>    </iframe>
+  </div>
 {% endblock content %}
