#98 setup route and first draft of html

--- a/prijateli_tree/app/templates/ready.html
+++ b/prijateli_tree/app/templates/ready.html
@@ -4,6 +4,7 @@
 {% endblock title %}
 {% block content %}
   <div class="container-sm general-container">
+    <h1>{{ name }}</h1>
     <h1>Get Ready to Play</h1>
     <h2 class="text-danger">Red</h2>
     <h3>or</h3>
