--- a/prijateli_tree/app/templates/start_of_game.html
+++ b/prijateli_tree/app/templates/start_of_game.html
@@ -7,7 +7,11 @@
     <div class="pb-4">
       <h1>{{ text.ready_to_play.get_ready }}</h1>
     </div>
-    {{ text.real_game_intro.if_you_win | replace('{X}', points) }}
+    {% if practice_game %}
+      <h3>{{ text.intro_practice.since_these_rules }}</h3>
+    {% else %}
+      <h3>{{ text.real_game_intro.added_points | replace('{X}', points) }}</h3>
+    {% endif %}
     <div class="p-5">
       <form method="get"
             action="{{ url_for('view_round', player_id=player_id, game_id=game_id) }}">
